--- a/zh_CN/tutorial/get-started.html
+++ b/zh_CN/tutorial/get-started.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="../_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>入门 &#8212; HinetPy 0.6.7+5.g0dbc80a 文档</title>
+    <title>入门 &#8212; HinetPy 0.6.7+6.gfaa3558 文档</title>
     <link rel="stylesheet" href="../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6.7+5.g0dbc80a',
+        VERSION:     '0.6.7+6.gfaa3558',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -56,7 +56,7 @@
         <li class="right" >
           <a href="../tutorial.html" title="教程"
              accesskey="P">上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+5.g0dbc80a 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+6.gfaa3558 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../tutorial.html" accesskey="U">教程</a> &#187;</li> 
       </ul>
     </div>
@@ -68,7 +68,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    ../index.html" class="text-logo">HinetPy v0.6.7+5.g0dbc80a</a>
+    ../index.html" class="text-logo">HinetPy v0.6.7+6.gfaa3558</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -259,7 +259,7 @@ Type &quot;help&quot;, &quot;copyright&quot;, &quot;credits&quot; or &quot;licen
         <li class="right" >
           <a href="../tutorial.html" title="教程"
              >上一页</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+5.g0dbc80a 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">HinetPy 0.6.7+6.gfaa3558 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../tutorial.html" >教程</a> &#187;</li> 
       </ul>
     </div>
