--- a/_modules/HinetPy/win32.html
+++ b/_modules/HinetPy/win32.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="../../_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>HinetPy.win32 &#8212; HinetPy 0.6.7+7.g6adb80f documentation</title>
+    <title>HinetPy.win32 &#8212; HinetPy 0.6.7+8.g50f7122 documentation</title>
     <link rel="stylesheet" href="../../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.6.7+7.g6adb80f',
+        VERSION:     '0.6.7+8.g50f7122',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -47,7 +47,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">HinetPy 0.6.7+7.g6adb80f documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">HinetPy 0.6.7+8.g50f7122 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li> 
       </ul>
     </div>
@@ -59,7 +59,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    ../../index.html" class="text-logo">HinetPy v0.6.7+7.g6adb80f</a>
+    ../../index.html" class="text-logo">HinetPy v0.6.7+8.g50f7122</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -647,7 +647,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">HinetPy 0.6.7+7.g6adb80f documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">HinetPy 0.6.7+8.g50f7122 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li> 
       </ul>
     </div>
