--- a/changelog.html
+++ b/changelog.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>Changelog &#8212; HinetPy 0.6.7+8.g50f7122 documentation</title>
+    <title>Changelog &#8212; HinetPy 0.6.7+10.g33697cf documentation</title>
     <link rel="stylesheet" href="_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6.7+8.g50f7122',
+        VERSION:     '0.6.7+10.g33697cf',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -55,7 +55,7 @@
         <li class="right" >
           <a href="appendix/response.html" title="Instrumental Response"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+8.g50f7122 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+10.g33697cf documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="container-wrapper">
@@ -66,7 +66,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    index.html" class="text-logo">HinetPy v0.6.7+8.g50f7122</a>
+    index.html" class="text-logo">HinetPy v0.6.7+10.g33697cf</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -309,7 +309,7 @@ no longer return values</li>
         <li class="right" >
           <a href="appendix/response.html" title="Instrumental Response"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+8.g50f7122 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">HinetPy 0.6.7+10.g33697cf documentation</a> &#187;</li> 
       </ul>
     </div>
 <script type="text/javascript">
