--- a/zh_CN/_modules/HinetPy/win32.html
+++ b/zh_CN/_modules/HinetPy/win32.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" type="text/css" href="../../_static/css/bootstrap-theme.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <title>HinetPy.win32 &#8212; HinetPy 0.6.7+10.g33697cf 文档</title>
+    <title>HinetPy.win32 &#8212; HinetPy 0.6.7+11.g0c235b2 文档</title>
     <link rel="stylesheet" href="../../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.6.7+10.g33697cf',
+        VERSION:     '0.6.7+11.g0c235b2',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -48,7 +48,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python 模块索引"
              >模块</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">HinetPy 0.6.7+10.g33697cf 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">HinetPy 0.6.7+11.g0c235b2 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">模块代码</a> &#187;</li> 
       </ul>
     </div>
@@ -60,7 +60,7 @@
   <div id="left-column">
     <div class="sphinxsidebar">
         <a href="
-    ../../index.html" class="text-logo">HinetPy v0.6.7+10.g33697cf</a>
+    ../../index.html" class="text-logo">HinetPy v0.6.7+11.g0c235b2</a>
         
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
@@ -648,7 +648,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python 模块索引"
              >模块</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">HinetPy 0.6.7+10.g33697cf 文档</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">HinetPy 0.6.7+11.g0c235b2 文档</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >模块代码</a> &#187;</li> 
       </ul>
     </div>
