--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; HinetPy 0.6.9+6.gd27f5a6 documentation</title>
+  <title>Index &mdash; HinetPy 0.6.9+7.g7b8eede documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -27,7 +27,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                0.6.9+6.gd27f5a6
+                0.6.9+7.g7b8eede
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
