--- a/zh_CN/search.html
+++ b/zh_CN/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>搜索 &mdash; HinetPy 0.6.9+6.gd27f5a6 文档</title>
+  <title>搜索 &mdash; HinetPy 0.6.9+7.g7b8eede 文档</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -31,7 +31,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                0.6.9+6.gd27f5a6
+                0.6.9+7.g7b8eede
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
