--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Search &mdash; HinetPy 0.6.9+7.g7b8eede documentation</title>
+  <title>Search &mdash; HinetPy 0.6.9+8.gbda0a76 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -30,7 +30,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                0.6.9+7.g7b8eede
+                0.6.9+8.gbda0a76
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
