--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Search &mdash; HinetPy v0.6.10.dev20+gf8104d9 documentation</title>
+  <title>Search &mdash; HinetPy v0.6.10.dev21+g7af64d1 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -30,7 +30,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                v0.6.10.dev20+gf8104d9
+                v0.6.10.dev21+g7af64d1
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
