--- a/zh_CN/search.html
+++ b/zh_CN/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>搜索 &mdash; HinetPy v0.6.10.dev22+gaadb9c6 文档</title>
+  <title>搜索 &mdash; HinetPy v0.6.10.dev23+g917e42e 文档</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -31,7 +31,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                v0.6.10.dev22+gaadb9c6
+                v0.6.10.dev23+g917e42e
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
