--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; HinetPy v0.6.10.dev40+g506ab17 documentation</title>
+  <title>Index &mdash; HinetPy v0.6.10.dev41+gc9814af documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -27,7 +27,7 @@
             <a href="index.html" class="icon icon-home"> HinetPy
           </a>
               <div class="version">
-                v0.6.10.dev40+g506ab17
+                v0.6.10.dev41+gc9814af
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -127,6 +127,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_sac">extract_sac() (in module HinetPy.win32)</a>
+</li>
+      <li><a href="api/HinetPy.win32.html#HinetPy.win32.extract_sacpz">extract_sacpz() (in module HinetPy.win32)</a>
 </li>
   </ul></td>
 </tr></table>
